--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Poppins:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap');
+
+@layer base {
+    .text-shadow {
+        text-shadow: -6px 6px 10px rgba(0, 0, 0, 0.4);
+    }
+}
+
+@layer utilities {
+    .img-shadow {
+        filter: drop-shadow(-6px 8px 15px rgba(0, 0, 0, 0.4))
+    }
+}
